AkshayVispute-Salesforce/akshay.vispute@eternussolutions.com/src/objects/Contact__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <label>Candidate Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>College_Name__c</fullName>
        <label>College Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_CTC__c</fullName>
        <label>Current CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Company__c</fullName>
        <label>Current Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_CTC__c</fullName>
        <label>Expected CTC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTECH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTECH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contacts</pluralLabel>
    <recordTypes>
        <fullName>Experienced</fullName>
        <active>true</active>
        <label>Experienced</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fresher</fullName>
        <active>true</active>
        <label>Fresher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>